// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can be stack of conditional prompts > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`can be stack of conditional prompts > tty output 1`] = `
"1/1a optional (press esc to skip)






     ❯


     ❯ f


     ❯ fo


     ❯ foo
"
`;

exports[`command level > passing object makes enabled default to true > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`command level > passing object makes enabled default to true > tty output 1`] = `
"1/1a






     ❯


     ❯ f


     ❯ fo


     ❯ foo
"
`;

exports[`parameter defaults to custom settings > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`parameter defaults to custom settings > tty output 1`] = `
"1/1a






     ❯


     ❯ f


     ❯ fo


     ❯ foo
"
`;

exports[`parameter level > can be passed object > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`parameter level > can be passed object > tty output 1`] = `
"1/1a






     ❯


     ❯ f


     ❯ fo


     ❯ foo
"
`;

exports[`parameter settings overrides default settings > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`parameter settings overrides default settings > tty output 1`] = `""`;

exports[`prompt can be enabled by default > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be enabled by default > tty output 1`] = `
"1/1a






     ❯


     ❯ f


     ❯ fo


     ❯ foo
"
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does match > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does match > tty output 1`] = `
"1/1a






     ❯


     ❯ f


     ❯ fo


     ❯ foo
"
`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does not match > args 1`] = `[ErrorMissingArgument: Missing argument for flag "b".]`;

exports[`prompt can be toggled by check on error > toggle to enabled > check does not match > tty output 1`] = `""`;

exports[`prompt is disabled by default > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`prompt is disabled by default > tty output 1`] = `""`;
